# rl-robot-climbing

./: README.md
Code/firmware/src/: binding.cpp  build-targets.mk  main.cpp  motion.cpp  rhock-stream.cpp
Code/gait_control/src/: CMakeLists.txt  config.h  main.cpp  mapping.cpp  mapping.h  motion.cpp  motion.h
Code/metabot/: change_weights.py  pretrain_weights.py  real_gait.py  show_weights.py  simulation_final.py  simulation_gait.py  simulation_gait_plane.py  test.py  test_q.py  train_exp_pool.py  train_on_experience.py  train_on_experience_sim.py
Code/metabot/API/: close_motor_robot.py  demo.py  metabotAPI.py
Code/metabot/Aruco/: aruco_detection.py  aruco_detector.py  aruco_detector1.py  aruco_detector2.py
Code/metabot/Kinematics/: Kinematics.py  Kinematics_firmware.py
Code/metabot/MetabotAPI/: .gitignore  README.md
Code/metabot/MetabotAPI/cpp/: CMakeLists.txt  main.cpp
Code/metabot/MetabotAPI/java/: DebugHolo.java  DemoHoloLine.java  DemoHoloMonitor.java  DemoHoloMotion.java  DemoHoloPushObstacle.java  DemoHoloState.java  HoloBinding.cpp  HoloBinding.java  HoloBindingTest.java  Makefile  readme.txt
Code/metabot/MetabotAPI/python/: CMakeLists.txt  binding.cpp  bindingHolobot.cpp  demo-holo-dist.py  demo-holo-ligne.py  demo-holo-monitor.py  demo-holo-motion.py  demo-holo-obstacle.py  demo-holo-vivant.py  demo.py  readme.txt  servoing-expe.py
Code/metabot/MetabotAPI/src/: CMakeLists.txt  Holobot.cpp  Holobot.h  MetabotV2.cpp  MetabotV2.h  Packet.cpp  Packet.h  Robot.cpp  Robot.h  binding.cpp
Code/metabot/Motion/: motion.py
Code/metabot/TF/: tf_2d.py  tf_3d.py
Code/metabot/Vrep/: real_world.py  real_world_.py  vrep_simulation.py
Code/metabot/q/: rl_q0.py  rl_q1.py  rl_q2.py  rl_qfa_1.py
Models/: scene.ttt
Models/metabot/ttm/: metabot.ttm
Models/metabot/urdf/: robot.urdf
